# mole_examples

./: .editorconfig  .gitignore  .gitpod.yml  PKGBUILD  README.md  environment311.yml  environment312.yml  environment313.yml  environment3132.yml  run.sh
.github/workflows/: actions.yml  docs.yml  homework.yml  latex.yml  libmole-docs.yml  libmole-git.yml  libmole.yml
PKGBUILDs/: README.md  check.sh
PKGBUILDs/glpk-static/: PKGBUILD
PKGBUILDs/lapack-static/: PKGBUILD
PKGBUILDs/libmole-git/: .SRCINFO  .nvchecker.toml  PKGBUILD
PKGBUILDs/mole/: .SRCINFO  PKGBUILD
PKGBUILDs/mole-git/: .SRCINFO  PKGBUILD
PKGBUILDs/mtk-git/: PKGBUILD
PKGBUILDs/python-matlab-proxy-bin/: PKGBUILD
PKGBUILDs/python-pymole-git/: .SRCINFO  PKGBUILD
PKGBUILDs/python-pymtk-git/: .SRCINFO  PKGBUILD
api_docs/matlab/: index.html
doc_C++/: annotated.html  annotated_dup.js  classDivergence-members.html  classDivergence.html  classDivergence__inherit__graph.map  classDivergence__inherit__graph.md5  classGradient-members.html  classGradient.html  classGradient__inherit__graph.map  classGradient__inherit__graph.md5  classInterpol-members.html  classInterpol.html  classInterpol__inherit__graph.map  classInterpol__inherit__graph.md5  classLaplacian-members.html  classLaplacian.html  classLaplacian__inherit__graph.map  classLaplacian__inherit__graph.md5  classRobinBC-members.html  classRobinBC.html  classRobinBC__inherit__graph.map  classRobinBC__inherit__graph.md5  classUtils-members.html  classUtils.html  classes.html  dir_a8a9424ca1013d506555289400d32619.html  dir_a8a9424ca1013d506555289400d32619.js  divergence_8cpp.html  divergence_8cpp__incl.map  divergence_8cpp__incl.md5  divergence_8cpp_source.html  divergence_8h.html  divergence_8h__dep__incl.map  divergence_8h__dep__incl.md5  divergence_8h__incl.map  divergence_8h__incl.md5  divergence_8h_source.html  doxygen_crawl.html  files.html  functions.html  (+74 more)
doc_C++/search/: all_4.js  all_6.js  files_4.js  functions_4.js  functions_5.js  searchdata.js
doc_MATLAB/: index.html
doc_MATLAB/mole_MATLAB/: DI2.html  DI3.html  GI1.html  GI13.html  GI2.html  amean.html  boundaryIdx2D.html  curl2D.html  div.html  div2D.html  div2DCurv.html  div2DNonUniform.html  div3D.html  div3DCurv.html  div3DNonUniform.html  divNonUniform.html  grad.html  grad2D.html  grad2DCurv.html  grad2DNonUniform.html  grad3D.html  grad3DCurv.html  grad3DNonUniform.html  gradNonUniform.html  gridGen.html  hmean.html  index.html  interpol.html  interpol2D.html  interpol3D.html  interpolCentersToFacesD1D.html  interpolCentersToFacesD2D.html  (+38 more)
docker/: actions.Dockerfile  libmole-docs.Dockerfile  libmole-git.Dockerfile  libmole.Dockerfile
examples/: README.md
examples/cpp/: CMakeLists.txt  README.md  RK2.cpp  convection_diffusion.cpp  elliptic1D.cc  elliptic1D.cpp  elliptic2D.cpp  helloarmadillo.cc  hyperbolic1D.cpp  hyperbolic1D_upwind.cpp  parabolic1D.cpp  schrodinger1D.cc  schrodinger1D.cpp  schrodinger2D.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  transport1D.cc  transport1D.cpp
examples/old_old_archived/cpp/: CMakeLists.txt  elliptic2D.cc  sparse.cc
homework/: .gitignore  CMakeLists.txt  appendix.tex  carma_example.cc  discontinuo.m  elliptic1DAznaran.m  elliptic1dplots.py  example1.tex  example2.tex  example3.tex  example4.tex  installer.sh  main.tex  moledirectoriescpp.txt  moledirectoriesoctave.txt  octave-help.txt  parabolic2D.m  plotelliptic1d.py  preamble.tex  project.tex  question1.tex  question2.tex  question3.tex  references.bib  tutorial.tex
homework/_minted-main/: 0546B7D5BE2ECF398D1177276172C9C63531584F92A75793DF67891B8C98787F.pygtex  055E8DF6C718EA3BE4CB7EC13319F99A3531584F92A75793DF67891B8C98787F.pygtex  06826F883C460F424333F26E3AD0A35DD67FECDC217B5559C0D20756C7D0FB26.pygtex  211B24B87EA6E63D8B0E898DF48094772ADEF3F8453DE61B4997FFBB3B970641.pygtex  2721E9FC7115529AF18FC17C02ADC2D02ADEF3F8453DE61B4997FFBB3B970641.pygtex  2B8E0EC4E3F9507E3381CACD14DF4F24D3773C8B440B993359565A23D713B17A.pygtex  2FCEE2834F805E5BCF1AD2FC7B023BD6D3773C8B440B993359565A23D713B17A.pygtex  49574A8CAE37189E85B4BBA61C389FF83531584F92A75793DF67891B8C98787F.pygtex  4CD9D8204E7B072B8F341F1B04F4B91C2ADEF3F8453DE61B4997FFBB3B970641.pygtex  64CBE176883D6E235C627C6ED5A4F3803531584F92A75793DF67891B8C98787F.pygtex  82213914DFCA510C27C91A3640B668042ADEF3F8453DE61B4997FFBB3B970641.pygtex  8495ED8D73F84F7A51774F1688FBB89163C55ED8AB2241A76FE8E4FA7A949106.pygtex  95708AF4EC4CE6C4AD357880B1AEA81ED67FECDC217B5559C0D20756C7D0FB26.pygtex  BA728AE4FCA8B4DD8EA1C26CF43B6FF88C192F03F53E4A6C9C54C5A72C11CBA8.pygtex  C2BF6236B4FF5562856E4968C24C3B9F2ADEF3F8453DE61B4997FFBB3B970641.pygtex  D7EEE0E5F7D8BF20940743CC4032826C2ADEF3F8453DE61B4997FFBB3B970641.pygtex  E0F56D29191484DDA455D6ADA6B38BAD2ADEF3F8453DE61B4997FFBB3B970641.pygtex  EA86AF78260684647F100F66B5C54A472ADEF3F8453DE61B4997FFBB3B970641.pygtex  F025BE97EC90D793F59513F90CEA28B904A494C1E48B88088EA7F8E97EB34E32.pygtex  F0B8542F709223A42DAA6496500534CC3531584F92A75793DF67891B8C98787F.pygtex  F3B54B2522CAEC816D7A2BFFCDD1365D2ADEF3F8453DE61B4997FFBB3B970641.pygtex
homework/slides/: exercise1.tex  main.tex  preamble.tex  title.tex  toc.tex
html/: .buildinfo  genindex.html  index.html  objects.inv  overview.html  search.html  searchindex.js  sitemap.xml
patches/: include.patch  includes.patch  patch.diff
project/: Leapfrog_Advection.m  application.tex  bibliography.tex  main.tex  objective.tex  preamble.tex  references.bib
tests/cpp/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
tutorial/: 1.cc  2.cc  3.cc  CMakeLists.txt  abstract.tex  addBC1D_example.m  animation.mkv  animation.py  appendix.tex  codeoperators.tex  compact.tex  comparative.py  comparativesparsedense.py  docker.sh  documentation.tex  foundations.tex  header.ist  installation.tex  installerarchlinux.sh  installerubuntu.sh  ivp.tex  main.beamer.tex  main.tex  matplotlibrc  methods.tex  mimetic.tex  numerical.tex  operators.tex  preamble.tex  preface.tex  references.bib  staggered.py  static.py  tests.tex  validation.tex  visualization.tex
(+930 files in other folders)
